--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -67,6 +67,13 @@ body {
     font-size: 22px;
     color: #707070;
 }
+.outline-text{
+    text-transform: uppercase;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #fff;
+    letter-spacing: 3px;
+}
 
 @media (max-width:768px) {
     .section-h45{
