some more work on meet the team page

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -68,6 +68,9 @@ body {
     font-size: 22px;
     color: #707070;
 }
+.mt-50{
+    margin-top: 50px;
+}
 .outline-text{
     text-transform: uppercase;
     -webkit-text-fill-color: transparent;
