--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1122,6 +1122,79 @@
 
 
 
+/* blogs-page start */
+.blogs-page .blog-top-header{
+    padding: 0 !important;
+}
+.blogs-page .blog-top-header{
+    position: relative;
+    margin-top: 87px;
+}
+.blogs-page .main-header .text-box{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: fit-content;
+    margin: auto;
+    width: fit-content;
+}
+.blogs-page .main-header .bg-overlay{
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6));
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* blogs cards start */
+
+.blogs-page  .blog-card{
+    box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.12);
+}
+.blogs-page  .blog-card-body{
+    padding: 30px;
+    height: 340px;
+}
+.blogs-page  .blog-card:hover{
+    box-shadow: 0 3px 26px 3px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+.blogs-page  .blog-card-body h3{
+    font-size: 24px;
+    font-weight: var(--medium);
+    margin-top: 15px;
+}
+.blogs-page  .blog-card-body .global-p{
+    font-size: 18px;
+}
+.blogs-page  .blog-card-body a{
+    font-size: 14px;
+    font-weight: var(--bold);
+    text-decoration: none;
+    margin-top: 10px;
+    color: #000;
+}
+.blogs-page  .blog-card-footer{
+    padding: 6px 30px;
+    border-top: 0.5px solid #ebe7e7;
+}
+.blogs-page  .blog-card-footer p{
+    font-size: 15px;
+    color: #707070;
+}
+
+
+/* blogs cards end */
+
+
+/* blogs-page end */
+
+
+
 
 
 @media (max-width:550px){
@@ -1642,6 +1715,20 @@
     }
 
     /* footer end */
+
+    /* blogs page start */
+    .blogs-page .blog-card-body h3 {
+        font-size: 21px;
+    }
+    .blogs-page .blog-card-body p{
+        font-size: 16px;
+    }
+
+    .blogs-page .blog-card-body {
+        height: 360px;
+    }
+
+    /* blogs page end */
 }
 
 @media (min-width:1201px) AND (max-width:1400px) {
