--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -112,6 +112,23 @@ body {
     top: 0;
     left: 0;
 }
+
+/* our client section start */
+
+.our-client-sec{
+    background-color: var(--main-black);
+    color: #fff;
+    padding: 70px 0px;
+}
+.client-carousel{
+    margin-top: 50px;
+}
+.carousel-img{
+    width: 200px !important;
+    margin: auto;
+}
+
+/* our client section end */
 @media (max-width:768px) {
     .section-h45{
         font-size: 25px;
