--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@
     transition-duration: 0.3s;
 }
 
-.navbar .nav-btn {
+.nav-btn {
     background-image: linear-gradient(to right, #D00928, #670001);
     color: #fff;
     width: 150px;
@@ -69,6 +69,51 @@
     -moz-border-radius: 22px;
     -ms-border-radius: 22px;
     -o-border-radius: 22px;
+}
+.navbar .dropdown-submenu {
+    position: relative;
+}
+
+.navbar .dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+.navbar .dropdown:hover>.dropdown-menu {
+    display: block;
+}
+
+.navbar .dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+.navbar .dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.navbar .dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.navbar .dropdown-item:hover{
+    color: var(--red-one);
+    cursor: pointer;
+    background: transparent;
 }
 
 /* navbar styling end */
@@ -1175,6 +1220,110 @@
 /* what we do page end */
 
 
+/* social media pages start */
+
+.social-media-market .pages-banner-head-content{
+    background-image: url("../images/Mixed.jpg");
+    padding: 350px 0px;
+}
+.social-media-market .social-links-row{
+    background-color: var(--main-black);
+    padding: 15px 0px;
+}
+.social-media-market .social-links-row .social-link{
+    color: #fff;
+    font-weight: var(--medium);
+    text-decoration: none;
+}
+.social-media-market .social-media-case,
+.social-media-market .social-video-sec,
+.social-media-market .why-work-with-us{
+    background-color: #F4F4F4;
+    padding: 100px 0px;
+}
+.social-media-market .flip-card {
+    background-color: transparent;
+    width: 100%;
+    height: 350px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px;
+  }
+
+  .social-media-market .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .social-media-market .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .social-media-market  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .social-media-market .flip-card-back {
+    color: white;
+    transform: rotateY(180deg);
+  }
+  .social-media-market .flip-card-back.main-black,
+  .social-media-market .flip-card-front.main-black{
+    background-color: var(--main-black);
+  }
+  .social-media-market .flip-card-back.main-redOne,
+  .social-media-market .flip-card-front.main-redOne{
+    background-color: var(--red-one);
+  }
+
+  .social-media-market .flip-card-back a{
+    color: #fff;
+    text-decoration: none;
+  }
+  .social-media-market .front-text-box h3{
+    font-weight: var(--bold);
+    color: #fff;
+  }
+  .social-media-market h3{
+    font-weight: var(--bold);
+  }
+
+  .delivery-results-tabs .tabs-row .nav-link.active{
+    font-weight: var(--bold);
+    color: var(--red-one);
+  }
+  .delivery-results-tabs .tabs-row .nav-link{
+    font-weight: bold;
+    color: #000;
+  }
+  .delivery-results-tabs .tabs-row .tab-content .global-p{
+    font-size: 17px;
+  }
+  .delivery-results-tabs .tabs-row .tab-content .tab-pane{
+    border: 1px solid gainsboro;
+    border-top: none;
+    padding: 20px 30px;
+  }
+  .why-work-with-us .work-cards-row .work-card-header{
+    padding: 30px 0px;
+  }
+  .why-work-with-us .work-cards-row .work-card-header i{
+    font-size: 100px;
+    color: var(--red-one);
+  }
+
+
+
+/* social media pages end */
+
+
 
 
 @media (max-width:550px){
@@ -1586,6 +1735,15 @@
 
     /* meet our team page start end */
 
+
+    /* social media pages start */
+
+    .social-media-market .front-text-box h3{
+        font-size: 18px;
+    }
+
+    /* social media paged end */
+
 }
 
 @media (min-width:991px) AND (max-width:1200px) {
@@ -1709,6 +1867,14 @@
     }
 
     /* blogs page end */
+
+     /* social media pages start */
+
+     .social-media-market .front-text-box h3{
+        font-size: 18px;
+    }
+
+    /* social media paged end */
 }
 
 @media (min-width:1201px) AND (max-width:1400px) {
