--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,11 @@
 }
 .navbar .dropdown-submenu {
     position: relative;
+    padding: 8px;
+}
+.dropdown-menuParent,
+.dropdown-menu li{
+    padding: 8px;
 }
 
 .navbar .dropdown-submenu>.dropdown-menu {
@@ -115,7 +120,6 @@
     cursor: pointer;
     background: transparent;
 }
-
 /* navbar styling end */
 
 
