--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1324,14 +1324,17 @@
     color: var(--red-one);
   }
   .social-bg-img{
-    background-image: url("../images/social-bg.jpg");
+    background-image: url("../images/social-bg.png");
     min-height: 500px; 
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
   }
-
+  .social-bg-img h3,
+  .social-bg-img p{
+    color: #fff !important;
+  }
 
 
 /* social media pages end */
