add seo images and links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1280,8 +1280,36 @@
     background-image: url("../images/new/What-We-Do/PPC-Ads/MS\ Bing\ Ads\ Agency.jpg");
     padding: 350px 0px;
 }
-.social-media-market .pages-banner-head-content.linkdin-advertising{
-    background-image: url("../images/new/What-We-Do/Social-Media-Agency-in-London/Linkedin\ Advertising\ Agency.jpg");
+.social-media-market .pages-banner-head-content.search-engin-page{
+    background-image: url("../images/new/What-We-Do/SEO/SEO\ Agency\ in\ Dubai.jpg");
+    padding: 350px 0px;
+}
+.social-media-market .pages-banner-head-content.organic-seo{
+    background-image: url("../images/new/What-We-Do/SEO/Organic\ SEO.jpg");
+    padding: 350px 0px;
+}
+.social-media-market .pages-banner-head-content.ecommerce-seo{
+    background-image: url("../images/new/What-We-Do/SEO//ECommerce\ SEO.jpg");
+    padding: 350px 0px;
+}
+.social-media-market .pages-banner-head-content.shopify-seo{
+    background-image: url("../images/new/What-We-Do/SEO/Shopify\ SEO\ Agency.jpg");
+    padding: 350px 0px;
+}
+.social-media-market .pages-banner-head-content.wordpress-seo{
+    background-image: url("../images/new/What-We-Do/SEO/Wordpress\ SEO.jpg");
+    padding: 350px 0px;
+}
+.social-media-market .pages-banner-head-content.digital-pr{
+    background-image: url("../images/new/What-We-Do/SEO/Digital\ PR.jpg");
+    padding: 350px 0px;
+}
+.social-media-market .pages-banner-head-content.{
+    background-image: url("../images/new/What-We-Do");
+    padding: 350px 0px;
+}
+.social-media-market .pages-banner-head-content.{
+    background-image: url("../images/new/What-We-Do");
     padding: 350px 0px;
 }
 
