--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1304,6 +1304,26 @@
     background-image: url("../images/new/What-We-Do/SEO/Digital\ PR.jpg");
     padding: 350px 0px;
 }
+.social-media-market .pages-banner-head-content.web-development-page{
+    background-image: url("../images/new/What-We-Do/Website-Development/Website\ Development\ Agency.jpg");
+    padding: 350px 0px;
+}
+.social-media-market .pages-banner-head-content.shopify-development-page{
+    background-image: url("../images/new/What-We-Do/Website-Development/Shopify\ Development.jpg");
+    padding: 350px 0px;
+}
+.social-media-market .pages-banner-head-content.wordpress-development-page{
+    background-image: url("../images/new/What-We-Do/Website-Development/Website\ Development\ Agency.jpg");
+    padding: 350px 0px;
+}
+.social-media-market .pages-banner-head-content.conversion-rate-page{
+    background-image: url("../images/new/What-We-Do/Website-Development/Conversion\ Rate\ Optimization.jpg");
+    padding: 350px 0px;
+}
+.social-media-market .pages-banner-head-content.{
+    background-image: url("../images/new/What-We-Do");
+    padding: 350px 0px;
+}
 .social-media-market .pages-banner-head-content.{
     background-image: url("../images/new/What-We-Do");
     padding: 350px 0px;
