--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1776,6 +1776,10 @@
     }
 
     /* faq section end */ 
+
+    .social-media-market .social-links-row .social-link{
+        font-size: 12px;
+    }
     
 }
 
